RESOLVED FIXED178066
Cordova: elements with tag position:fixed disappears (flickering) when a long content is scrolling and appears again when the scroll is finished.
https://bugs.webkit.org/show_bug.cgi?id=178066
Summary Cordova: elements with tag position:fixed disappears (flickering) when a long...
oscarabilleira
Reported 2017-10-08 01:27:17 PDT
A- Overview: Elements width position:fixed disappears (flickering) when a long content is scrolling and appears again when the scroll is stoped. B - Steps to Reproduce: 1) Create a simple html page into a cordova proyect (for example) 2) Put a div on the top and another on the buttom width "position:fixed" atribute. Include also a long text to make posible scroll it. I use for my test this simple estructure: http://www.oscarabilleira.com/test_ios/index.php, just copy the source code and create a html file in a cordova proyect for example. 3) When scrolls the text into the webkit the "fixed elements" disappears until the scroll is finished, only if there's a long content to scroll, like in the example. In other situations (randomly) the "flickering efect" can be shown even with a short content to scroll. C- Expected Results: When scroll the content the elements with "position:fixed" tag must be shown all the time even when the content is scrolled. D- Build Date & Hardware: After update to iOS 11 and actually with iOS 11.0.2 Tested iphone 7, iphone 7 plus and ipad air 2. Doesn't Occur using iOS 10.x.x or earlier. E- Additional Information: The same like in this old bug https://bugs.webkit.org/show_bug.cgi?id=137851
Attachments
Patch (4.28 KB, patch)
2017-11-08 19:52 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2017-10-09 13:07:55 PDT
Does this happen with the WKWebView version of Cordova (http://blog.ionic.io/cordova-ios-performance-improvements-drop-in-speed-with-wkwebview/)?
oscarabilleira
Comment 2 2017-10-09 14:06:03 PDT
I have tested and using WKWebView works fine
Radar WebKit Bug Importer
Comment 3 2017-10-09 16:27:36 PDT
Simon Fraser (smfr)
Comment 4 2017-11-08 18:43:22 PST
Simon Fraser (smfr)
Comment 5 2017-11-08 18:55:33 PST
I can reproduce. Investigating.
Simon Fraser (smfr)
Comment 6 2017-11-08 18:57:52 PST
Ah, we only call GraphicsLayer::setIsViewportConstrained() in the WKWebView code path, for coordinated scrolling.
Simon Fraser (smfr)
Comment 7 2017-11-08 19:52:11 PST
WebKit Commit Bot
Comment 8 2017-11-08 21:27:26 PST
Comment on attachment 326420 [details] Patch Clearing flags on attachment: 326420 Committed r224617: <https://trac.webkit.org/changeset/224617>
WebKit Commit Bot
Comment 9 2017-11-08 21:27:27 PST
All reviewed patches have been landed. Closing bug.
Darryl Pogue
Comment 10 2017-12-05 15:38:57 PST
This has been merged, but I'm guessing it missed the cut-off date for inclusion in iOS 11.2 because the issue still exists there
Simon Fraser (smfr)
Comment 11 2017-12-05 15:44:42 PST
Correct.
Note You need to log in before you can comment on or make changes to this bug.